--- a/app/page.module.css
+++ b/app/page.module.css
@@ -47,6 +47,7 @@
   position: absolute;
   bottom: 120px;
   left: 50%;
+  transform: translateX(-50%);
 }
 
 .contentContainer {
@@ -127,7 +128,7 @@
   min-width: 50%;
   min-height: 100%;
   width: auto;
-  height: 100dvh;
+  height: 100vh;
   transform: translate(-50%, -50%);
   object-fit: cover;
   z-index: -1;
