--- a/app/globals.css
+++ b/app/globals.css
@@ -13,12 +13,14 @@ html, body {
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
+  position: relative;
 }
 
 body {
   color: hsl(var(--foreground));
   font-family: var(--font-diatype);
   background-color: #000;
-  min-height: 100vh;
+  height: 100vh;
+  height: 100dvh;
 }
